add completed lab

--- a/index.html
+++ b/index.html
@@ -10,3 +10,14 @@
     <!-- Your code here -->
   </body>
 </html>
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="A male lion yawning and bearing his teeth"
+/>
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="A male lion yawning and bearing his teeth"
+  title="Tired Lion"
+/>
